--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Homepage"
 title_separator          : "-"
 name                     : &name "Uaena"
 description              : &description "A novice programmer"
-url                      : https://2730938958.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://2730938958.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "2730938958/2730938958.github.io"
 
