--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "uuu.png"
   name             : "Uaena"
   pronouns         : # example: "she/her"  
-  bio              : "Msc student of NUS"
+  bio              : "Master student of NUS"
   location         : "Guangdong"
   employer         : #"Red Brick University"
   uri              : # URL
